--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -123,3 +123,34 @@ button {
 	padding: 3.5px 6px 4px;
 }
 
+/*-----------------------------------------------------------------------------
+	Globals - Errors
+-----------------------------------------------------------------------------*/
+
+.invalid {
+	color: #fff;
+	margin-bottom: 1.5em;
+}
+.invalid > label {
+	margin-bottom: 0;
+	padding: 0.75em 1em 0.75em;
+	background-color: #d42;
+	border: 1px solid #c31;
+	border-bottom-width: 0;
+}
+.invalid > p {
+	margin: 0;
+	padding: 0 1em 0.75em;
+	background-color: #d42;
+	border: 1px solid #c31;
+	border-top-width: 0;
+	border-bottom-color: #b21;
+}
+.invalid a {
+	color: #fb9;
+	text-decoration: underline;
+}
+.invalid a:hover {
+	color: #721;
+}
+
